Bug 1544777 - Queue runnables if OnStartRequest is not finished, r=dragana

--HG--
extra : rebase_source : b004ea04315b5b78b44b1ebf03c7cb1406f4a73d